[package]
name = "movie_packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }

# AWS Dependancies
aws-sdk-config = "1.11.0"
aws-config = "1.1.2"
aws-sdk-dynamodb = "1.10.1"
tokio = { version = "1.35.1", features = ["full"] }
